# cpp_enum_set

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  LICENSE  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  bit__mask_8hpp.html  buildfile  classenum__set_1_1bit__mask.html  classenum__set_1_1type__set.html  classenum__set_1_1value__set.html  classenum__set_1_1value__set_1_1iterator.html  common_8hpp.html  dir_3c5f2039e74a55c5dad3bb76f13559df.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_e90b26f5cb846aed0d57478ccb3e0471.html  dir_ef3b2545113449f8f25e623a543d64e3.html  enum__set_8hpp.html  files.html  index.html  index__set_8hpp.html  integer__set_8hpp.html  magic__enum__set_8hpp.html  manifest  modules.html  namespaceenum__set.html  namespaceenum__set_1_1detail.html  namespaces.html  pages.html  repositories.manifest  searchdata-v1.js  standard__types_8hpp.html  structenum__set_1_1detail_1_1array.html  (+23 more)
.github/workflows/: ci.yml  gh-pages.yml
cmake/: docs.cmake  enum_setConfig.cmake  install-rules.cmake  variables.cmake
enum_set/: bit_mask.hpp  buildfile  type_set.hpp  type_set_visitor.hpp  value_set.hpp  value_set_iterator.hpp  version.hpp.in
example/: CMakeLists.txt  basic_tutorial.cpp  buildfile  rationale.cpp  visitation_example.cpp
example/magic/: buildfile  magic_enum_set_example.cpp
include/enum_set/: bit_mask.hpp  buildfile  common.hpp  enum_set.hpp  index_set.hpp  integer_set.hpp  standard_types.hpp  type_set.hpp  type_set_visitor.hpp  value_set.hpp  value_set_iterator.hpp  value_set_visitor.hpp
include/enum_set/magic/: magic_enum_set.hpp
scripts/: check_versions.sh
submit/: ae8f27819e04c14b
test/: CMakeLists.txt  buildfile  test_bit_mask.cpp  test_common.cpp  test_enum_set.cpp  test_index_set.cpp  test_iterator.cpp  test_type_set.cpp  test_value_set.cpp
test/include/: testing.hpp
test/magic/: buildfile  test_magic_enum_set.cpp
